opacity fade out doesn't trigger visibility detection for Media OVerlays (necessary for correct page turn behaviour)... to be investigated :(

--- a/_INPUT/pagination/data_demo2.css
+++ b/_INPUT/pagination/data_demo2.css
@@ -302,3 +302,71 @@ opacity: 1;
     font-size: 200%;
     bottom: 1em;
 }
+
+#container[data-subpage="0"] #page2,
+#container[data-subpage="0"] #page3,
+#container[data-subpage="0"] #page4,
+#container[data-subpage="0"] #page5,
+#container[data-subpage="0"] #page6
+{
+    /* visibility: hidden; */
+    opacity: 0;
+}
+
+#container[data-subpage="1"] #page1,
+#container[data-subpage="1"] #page3,
+#container[data-subpage="1"] #page4,
+#container[data-subpage="1"] #page5,
+#container[data-subpage="1"] #page6
+{
+    /* visibility: hidden; */
+    opacity: 0;
+}
+
+#container[data-subpage="2"] #page1,
+#container[data-subpage="2"] #page2,
+#container[data-subpage="2"] #page4,
+#container[data-subpage="2"] #page5,
+#container[data-subpage="2"] #page6
+{
+    /* visibility: hidden; */
+    opacity: 0;
+}
+
+#container[data-subpage="3"] #page1,
+#container[data-subpage="3"] #page2,
+#container[data-subpage="3"] #page3,
+#container[data-subpage="3"] #page5,
+#container[data-subpage="3"] #page6
+{
+    /* visibility: hidden; */
+    opacity: 0;
+}
+
+#container[data-subpage="4"] #page1,
+#container[data-subpage="4"] #page2,
+#container[data-subpage="4"] #page3,
+#container[data-subpage="4"] #page4,
+#container[data-subpage="4"] #page6
+{
+    /* visibility: hidden; */
+    opacity: 0;
+}
+
+#container[data-subpage="5"] #page1,
+#container[data-subpage="5"] #page2,
+#container[data-subpage="5"] #page3,
+#container[data-subpage="5"] #page4,
+#container[data-subpage="5"] #page5
+{
+    /* visibility: hidden; */
+    opacity: 0;
+}
+
+.page
+{
+-PREFIXED_PROPERTY-transition-property: opacity;
+-PREFIXED_PROPERTY-transition-duration: 500ms;
+-PREFIXED_PROPERTY-transition-delay: 0ms;
+-PREFIXED_PROPERTY-transition-timing-function: ease-out;
+}
